# tts-eval

./: .gitignore  README.md  hello.py  index.html  netlify.toml  pyproject.toml
src/: prep_eval_data.py
